Finish 1.20.1 - Pre trying to reinstall forge